# sysa

./: .copier-answers.yml  .gitignore  .prettierignore  LICENSE  README.md  README_DEVELOP.md  RELEASE.md  install.json  jest.config.js  junit.xml  package.json  pyproject.toml  tsconfig.json
.github/workflows/: build.yml  check-release.yml
binder/: environment.yml  postBuild  start
chaldene/: __init__.py
src/: Action.ts  ContentFactory.ts  CreateCellTypeItem.tsx  ExecuteCodeCell.ts  VPEditor.ts  VPEditorFactory.ts  VPNotebook.ts  VPWidget.tsx  index.ts
src/NodeSpec/: Binary.ts  Comparison.ts  IO.ts  IP.ts  Segmentations.ts  index.ts  super_resolution.ts
src/ReactVP/: EditorContext.ts  Utils.ts  index.ts
src/ReactVP/Actions/: ActionRegistry.ts  Actions.ts  FocusTracker.ts  GraphActions.ts  MenuActions.tsx  PanelsActions.tsx  SceneActions.ts  StateActions.ts  index.ts
src/ReactVP/CodeGeneration/: CaptureDifferenceInJupyterlab.ts  CaptureFolderImages.ts  CaptureHistogramInJupyterlab.ts  CaptureImageInJupyterlab.ts  CodeGenerator.ts  CodeGeneratorRegistry.ts  NodeCodeGenerators.ts  PythonCodeGenerator.ts  index.ts
src/ReactVP/Components/: Comment.tsx  ComputeNode.tsx  Handle.tsx  UseWidget.tsx  index.ts
src/ReactVP/GUI/: GUIElement.tsx  index.ts
src/ReactVP/GUI/ContextMenu/: ConnectionTooltips.tsx  ContextMenu.tsx  EdgeContextMenu.tsx  HandleContextMenu.tsx  MenuItem.tsx  NodeContextMenu.tsx  PanelContextMenu.tsx  SearchMenu.tsx  WidgetsContextMenu.tsx  (+1 more)
src/ReactVP/Spec/: ComputeNodeSpec.ts  NodeSpec.ts  NodeSpecRegistry.ts  index.ts
src/ReactVP/Style/: icons.tsx
src/ReactVP/Type/: BoundingBox.ts  ConnectionStatus.ts  Edge.ts  ExecuteStatus.ts  Graph.ts  Handle.ts  Node.ts  Registry.ts  Tuple.ts  Utils.ts  index.ts
src/ReactVP/VPEditor/: ControlPanel.tsx  ExecuteModeSwitch.tsx  FlowEditor.tsx  VPEditor.tsx  index.ts
src/ReactVP/Widgets/: CloseBackgroundTrigger.tsx  ColorBar.tsx  CropDialog.tsx  DiffMapTrigger.tsx  HistogramRangeWidget.tsx  ImageCropperWidget.tsx  ImageGallery.tsx  ImageViewerN.tsx  Input.tsx  Tuple2Input.tsx  Widget.tsx  WidgetsRegistry.tsx  genDiffMap.ts  index.ts
src/__tests__/: Utils.spec.ts  chaldene.spec.ts
style/: base.css  contextMenu.css  controlPanel.css  handle.css  imageCropper.css  imageGallery.css  imageViewer.css  index.js  input.css  menuItem.css  searchMenu.css  style.css
types/: react-range-slider-input.d.ts
ui-tests/: package.json
ui-tests/tests/: chaldene.spec.ts
use_cases/1. grain_size_measurement/: export.csv  grain_citation.txt  p5_grain_size_measurement.ipynb
use_cases/2. particle counting/: p1_particle_counting.ipynb  particle_citation.txt
use_cases/3. ai_assisted_enhancement/: ai_assisted_enhancement.ipynb  image.tif  image_citation.txt
use_cases/4. batch_process/: batch_process.ipynb  data_citation.txt
use_cases/4. batch_process/results/: export.csv
(+2 files in other folders)
