[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version>=0.3.2"]
build-backend = "hatchling.build"

[project]
name = "chaldene"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
     "jupyterlab>=4.0.0,<5.0.0",
     "numpy==2.2.4",
     "pillow==11.1.0",
     "pandas==2.2.3",
     "scikit-image==0.25.2",
     "scipy==1.15.2",
     "comm==0.2.2",
     "opencv-python==4.11.0.86",
     "matplotlib==3.10.1",
     "super_resolution @ git+https://github.com/Max-ChenFei/super_resolution@merge-forked-repo",
     "im2im @ https://zenodo.org/records/15072357/files/im2im-0.1.dev0+d20250323-py3-none-any.whl",
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls", "keywords"]

[tool.hatch.build.targets.sdist]
artifacts = ["chaldene/labextension"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel.shared-data]
"chaldene/labextension" = "share/jupyter/labextensions/chaldene"
"install.json" = "share/jupyter/labextensions/chaldene/install.json"

[tool.hatch.build.hooks.version]
path = "chaldene/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "chaldene/labextension/static/style.js",
    "chaldene/labextension/package.json",
]
skip-if-exists = ["chaldene/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "chaldene/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install 'jupyterlab>=4.0.0,<5'",
    "jlpm",
    "jlpm build:prod"
]
before-build-python = ["jlpm clean:all"]

[tool.check-wheel-contents]
ignore = ["W002"]
